Implement comment suggestion